--- a/.github/workflows/ci-cd-python-app.yml
+++ b/.github/workflows/ci-cd-python-app.yml
@@ -102,6 +102,8 @@ jobs:
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
+      with:
+        install_components: 'gke-gcloud-auth-plugin'
 
     - name: Get the GKE credentials so we can deploy to the cluster
       run: |
