Made work on minikube
1. Made two deployments instead of one
2. Point Service to -blue deployment.
3. Add minikube commands to README.md
4. Remove ingress.

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -3,9 +3,8 @@ kind: Kustomization
 resources:
 - deployment.yaml
 - service.yaml
-- ingress.yaml
 namespace: hello-gitops
 images:
 - name: hello-gitops
-  newName: aramattamara/hello-gitops
-  newTag: af47df7f81a8a3996cdfd0b423986bdc72e8216d
+  newName: hello-gitops
+  newTag: local
