--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,20 +2,43 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: hello-gitops
-  name: hello-gitops
+    app: hello-gitops-blue
+  name: hello-gitops-blue
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
-      app: hello-gitops
+      app: hello-gitops-blue-pod
   template:
     metadata:
       labels:
-        app: hello-gitops
+        app: hello-gitops-blue-pod
     spec:
       containers:
-        - image: hello-gitops
+        - image: "hello-gitops:local"
+          name: hello-gitops-blue-container
+          ports:
+            - name: http
+              containerPort: 8050
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: hello-gitops-green
+  name: hello-gitops-green
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: hello-gitops-green-pod
+  template:
+    metadata:
+      labels:
+        app: hello-gitops-green-pod
+    spec:
+      containers:
+        - image: "hello-gitops:local"
           name: hello-gitops
           ports:
             - name: http
