--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -10,5 +10,5 @@ spec:
       port: 8050
       targetPort: http
   selector:
-    app: hello-gitops
-  type: ClusterIP
+    app: hello-gitops-blue-pod
+  type: NodePort
