--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   ports:
     - name: http
-      port: 8050
-      targetPort: http
+      port: 8051
+      targetPort: main
   selector:
     app: hello-gitops-blue-pod
   type: NodePort
