Deploy feature_1=True

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
 
 WORKDIR /app
 RUN groupadd -r webservice && useradd --no-log-init -r -g webservice webservice
-RUN apt-get update && apt-get -y install curl wget busybox
+#RUN apt-get update && apt-get -y install curl wget busybox
 COPY . .
 RUN pip install -r requirements.txt
 
